force-app/main/default/objects/Housekeeper_Log__c/Housekeeper_Log__c.object-meta.xml
<CustomObject>
    <description>Store housekeeping activity log entries.</description>
    <label>Housekeeper Log</label>
    <nameField>
        <displayFormat>HL-{0000}</displayFormat>
        <label>Housekeeper Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Housekeeping Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>