force-app/main/default/objects/Housekeeper_Log__c/fields/Housekeeper__c.field-meta.xml
<CustomField>
    <fullName>Housekeeper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The role or position of the housekeeper</description>
    <label>Housekeeper</label>
    <referenceTo>Housekeeper__c</referenceTo>
    <relationshipLabel>Housekeeping Logs</relationshipLabel>
    <relationshipName>Housekeeping_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>