force-app/main/default/objects/Housekeeper_Log__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Housekeeping Logs</relationshipLabel>
    <relationshipName>Housekeeping_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>